# tarsier

./: .gitignore  .prettierignore  CITATION  LICENSE  README.md  format.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
tarsier-service/service/: Dockerfile  pageText.txt  pyproject.toml
tarsier-service/service/src/: auth.py  browser.py  db.py  llm.py  main.py  models.py  server.py
tarsier-snapshots/: .env.example  README.md  pyproject.toml
tarsier-snapshots/snapshots/: image_timing_statistics.txt  page_text_timing_statistics.txt  token_statistics.txt
tarsier-snapshots/snapshots/016a8fa0-16d0-4c22-a461-0544d8027fb5/: ocr.txt
tarsier-snapshots/snapshots/01d6fabd-adaf-4a4e-9990-0db26ea206ed/: ocr.txt
tarsier-snapshots/snapshots/0367e1f8-f319-4052-807f-ab0d6b0d0790/: ocr.txt
tarsier-snapshots/snapshots/03a77421-5216-4862-bc1d-02a8012d36cd/: ocr.txt
tarsier-snapshots/snapshots/04cb9cfa-dce1-4d43-b945-6be1d1cebd62/: ocr.txt
tarsier-snapshots/snapshots/0569bfe4-45e4-4e23-8bd7-21287b3f906e/: ocr.txt
tarsier-snapshots/snapshots/05W3ZEmj8pbuYSHArYUkz/: ocr.txt
tarsier-snapshots/snapshots/05cee383-8eb1-4946-a4c9-7d9a1de2ff8e/: ocr.txt
tarsier-snapshots/snapshots/06613871-5393-47cd-89c9-51282dde0f41/: ocr.txt
tarsier-snapshots/snapshots/073862e2-e519-42cb-8cb0-d9e419a33a1b/: ocr.txt
tarsier-snapshots/snapshots/07wOwFaw3aGekjCBpZkg0/: ocr.txt
tarsier-snapshots/snapshots/084a1c83-f0db-4370-8be7-53f6c4d6c337/: ocr.txt
tarsier-snapshots/snapshots/0880ea91-7c5e-415c-9d2f-00457f110ee8/: ocr.txt
tarsier-snapshots/snapshots/098e8f7d-2cb8-42de-823f-1b6e889220ba/: ocr.txt
tarsier-snapshots/snapshots/0a10d09a-2082-4484-9a49-44225d4efec7/: ocr.txt
tarsier-snapshots/snapshots/0acdfe9d-7c9d-4cd6-87b9-fd6b9301af82/: ocr.txt
tarsier-snapshots/snapshots/0ef46221-d4eb-45d1-9f00-8cb766381547/: ocr.txt
tarsier-snapshots/snapshots/0f8d967e-07a9-450a-b6b9-c60ad4c07ec7/: ocr.txt
tarsier-snapshots/snapshots/0fdyKSMbc3kVUgL9RGiEk/: ocr.txt
tarsier-snapshots/snapshots/0fe1cf15-d5fb-416c-9e1b-f5cae188d088/: ocr.txt
tarsier-snapshots/snapshots/0orFfEesEVpe1BN7B114a/: ocr.txt
tarsier-snapshots/snapshots/1080aa44-bb0b-4115-90e9-9d14b7279a56/: ocr.txt
tarsier-snapshots/snapshots/10ee142f-1f20-4e8a-a80c-877e8210e492/: ocr.txt
tarsier-snapshots/snapshots/111ebd24-8617-48cb-b963-eb692bf1e53a/: ocr.txt
tarsier-snapshots/snapshots/11332f64-75ff-42d1-a301-60aa68f9dfef/: ocr.txt
tarsier-snapshots/snapshots/1181febe-214c-44a6-a046-8326ca87e992/: ocr.txt
tarsier-snapshots/snapshots/119173bd-1e1d-44c1-becc-2ab9ab382016/: ocr.txt
tarsier-snapshots/snapshots/11u8vZX9JHQsOrXVSWfJd/: ocr.txt
tarsier-snapshots/snapshots/135502cc-bdaf-4f36-a2d5-4023a331aa6a/: ocr.txt
tarsier-snapshots/snapshots/13ce44d0-757b-4b1e-8c5e-51d3d7e9bf0f/: ocr.txt
tarsier-snapshots/snapshots/1534f6a2-81ed-48ff-b118-a4d752dae524/: ocr.txt
tarsier-snapshots/snapshots/174b1151-ea9a-4745-bc88-8c56ffc23131/: ocr.txt
tarsier-snapshots/snapshots/177e9592-88fd-4ba5-a86a-ae42934c4a18/: ocr.txt
tarsier-snapshots/snapshots/17c261ff-3f04-4fcf-bccd-90df4d043e61/: ocr.txt
tarsier-snapshots/snapshots/17d5678f-05ac-4bd4-b52b-79e6a710f8f1/: ocr.txt
tarsier-snapshots/snapshots/180a3e5f-1cd7-4073-bf02-3dc663a6d41e/: ocr.txt
tarsier-snapshots/snapshots/18b0b51e-196c-4765-bd70-aecff53f7e4d/: ocr.txt
tarsier-snapshots/snapshots/18c29ec8-de1d-4015-aeb5-92129b9bba6c/: ocr.txt
tarsier-snapshots/snapshots/18f93ec4-086c-467c-a952-8565d8005742/: ocr.txt
tarsier-snapshots/snapshots/19c03b27-1aab-41df-a3a5-04ebf601d203/: ocr.txt
tarsier-snapshots/snapshots/1JWoJWs3uZMt8Wa5ql6pr/: non_ocr_2.txt  ocr.txt
tarsier-snapshots/snapshots/1N0FTiHE53vO1j0nHDNG5/: ocr.txt
tarsier-snapshots/snapshots/1ad55456-3d44-4774-b434-e20d773fa15f/: ocr.txt
tarsier-snapshots/snapshots/1be45c61-0170-491d-a865-50612b5274d7/: ocr.txt
tarsier-snapshots/snapshots/1d080fc7-d7f7-431d-9b86-a5806093d458/: ocr.txt
tarsier-snapshots/snapshots/1d7f793c-5c51-487a-86e7-dd68a478b16a/: ocr.txt
tarsier-snapshots/snapshots/1e4d7ca6-5292-4857-aca6-bd0fff337435/: ocr.txt
tarsier-snapshots/snapshots/1f13a13d-bbda-4b2d-bbdc-dc1cd753f762/: ocr.txt
tarsier-snapshots/snapshots/1qkOHewUy0Kqq9RVVSOoQ/: non_ocr_2.txt  ocr.txt
tarsier-snapshots/snapshots/1z50b4syZzf7J1kQt2k7W/: ocr.txt
tarsier-snapshots/snapshots/2124f50c-3f61-4421-a71c-61f9d4b62bae/: ocr.txt
tarsier-snapshots/snapshots/23b28508-b8be-4237-8a6d-d9901b4ae27f/: ocr.txt
tarsier-snapshots/snapshots/23f0de76-5954-497b-a612-6144caf8a5e1/: ocr.txt
tarsier-snapshots/snapshots/24SLE3KnDhtOYYgIM4ote/: non_ocr_2.txt  ocr.txt
tarsier-snapshots/snapshots/24dbdb56-bbda-44dd-a63b-25ab350588e5/: ocr.txt
tarsier-snapshots/snapshots/2ErcEyBkupKnoHkQAhJCk/: non_ocr_2.txt  (+1 more)
tarsier-snapshots/tarsier_snapshots/: snapshots.py
(+680 files in other folders)
