[tool.poetry]
name = "tarsier"
version = "0.5.8"
description = "Vision utilities for web interaction agents"
authors = ["Rohan Pandey", "Adam Watkins", "Asim Shrestha"]
readme = "README.md"
include = ["tarsier/**/*.min.js"]
exclude = ["tarsier/**/*.ts"]


[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.39.0"
selenium = "^4.15.2"
google-cloud-vision = "^3.4.5"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
mypy = "^1.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-playwright = "^0.4.3"
pytest-asyncio = ">=0.21.1,<0.24.0"
nest-asyncio = "^1.5.8"
webdriver-manager = "^4.0.1"
pytest-mock = "^3.12.0"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tarsier", "tests"]
known_first_party = ["commons"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "tarsier"
exclude = ["tests", "venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
