[tool.poetry]
name = "tarsier"
version = "0.6.32"
description = "Vision utilities for web interaction agents"
authors = ["Rohan Pandey", "Adam Watkins", "Asim Shrestha"]
readme = "README.md"
include = ["tarsier/**/*.min.js"]
exclude = ["tarsier/**/*.ts", "tarsier_snapshots", "tarsier_snapshots/*"]


[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.44.0"
selenium = "^4.21.0"
google-cloud-vision = "^3.7.2"
azure-ai-vision-imageanalysis = "^1.0.0b2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = ">=0.4.8,<0.6.0"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<6.0"
pytest-playwright = ">=0.4.4,<0.6.0"
pytest-asyncio = ">=0.21.2,<0.24.0"
nest-asyncio = "^1.6.0"
webdriver-manager = "^4.0.1"
pytest-mock = "^3.14.0"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tarsier", "tests"]
known_first_party = ["commons"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "tarsier"
exclude = ["tests", "venv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
